# pulumi-k8s

./: .flake8  .gitignore  Makefile  Pipfile  Pulumi.pulumi-k8s.yaml  Pulumi.yaml  README.md  __main__.py  provider.py  pyproject.toml
.github/: dependabot.yml
argocd/: argocd.py  install.yaml  juicer-app.yaml
bitwarden/: deployment.yaml
cni/: cilium.py
crds/: eck-crds.yaml  eck-operator.yaml  eck.yaml
csr/: __init__.py
elk/: elk.py
metrics/: __init__.py
namespaces/: __init__.py  namespaces.py
network/: __init__.py  cilium.py  ingress.py
network/ingress/: ingress.py
network/servicemesh/: linkerd_bootstrapca.yaml  servicemesh.py
pv/: persistentvolumes.py
pvs/: persistentvolumes.py
servicemesh/: servicemesh.py
storageclass/: __init__.py  openebs.py
vault-utils/: unseal.sh
vault_utils/: unseal.sh  vault.py  vault.yaml
